# sqlx-models

./: .env  Cargo.toml  README.md  test.sh
migrations/: 20211204122813_test.sql
sqlx-models/: Cargo.toml
sqlx-models-derive/: Cargo.toml  README.md
sqlx-models-derive/src/: lib.rs
sqlx-models-orm/: Cargo.toml
sqlx-models-orm/src/: lib.rs
sqlx-models-orm/tests/: examples.rs
sqlx-models/migrations/: 20211204122813_test.sql
sqlx-models/src/: lib.rs
sqlx-models/tests/: example.rs  examples.rs
src/: .lib.rs.swp  lib.rs
tests/: example.rs
