[package]
name = "sqlx-models-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["extra-traits", "full"] }
quote = "*"

[dev-dependencies]
tokio = { version = "1.2.0", features = ["full"] }
serde = { version = "*" }
sqlx = { version = "0.5.2", features = [ "postgres", "runtime-tokio-native-tls", "offline", "chrono", "json", "decimal" ] }

[lib]
proc-macro = true

