[package]
name = "sqlx-models-derive"
version = "0.1.4"
edition = "2021"
authors = ["Nubis <nubis@constata.eu>"]
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Procedural macros for sqlx-models"
homepage = "https://github.com/constata-eu/sqlx-models"
repository = "https://github.com/constata-eu/sqlx-models"
keywords = ["sqlx", "postgres", "orm", "activerecord"]
categories = ["database"]

[dependencies]
syn = { version = "1.0.86", features = ["extra-traits", "full"] }
quote = "1.0.15"
convert_case = "0.5.0"

[lib]
proc-macro = true

