[package]
name = "sqlx-models"
version = "0.1.0"
edition = "2021"

authors = ["Nubis <nubis@constata.eu>"]
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "ActiveRecord based on SQLx for Postgres"
homepage = "https://github.com/constata-eu/sqlx-models"
repository = "https://github.com/constata-eu/sqlx-models"
keywords = ["sqlx", "postgres", "orm", "activerecord"]
categories = ["database"]

[dependencies]
sqlx-models-derive = { version = "0.1", path = "../sqlx-models-derive" }
async-trait = "0.1.52"
sqlx = { version = "0.5.2", features = [ "runtime-tokio-native-tls" ] }

[dev-dependencies]
sqlx = { version = "0.5.2", features = [ "postgres", "runtime-tokio-native-tls", "offline", "chrono", "json", "decimal" ] }
serde = "*"
serde_json = "*"
tokio = { version = "1.2.0", features = ["full"] }
base64-serde = "0.6.1"
base64 = "0.13.0"
serde_with = { version = "1.6.4", features = ["hex"]}
anyhow = "*"
